deploy-common/deploy-service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-auth
spec:
  ports:
    - port: 8031
      targetPort: 8031
      name: http
      protocol: TCP
  selector:
    app: service-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-auth
  template:
    metadata:
      labels:
        app: service-auth
    spec:
      containers:
        - name: c-service-auth
          image: trongnv138/k8s_facebook:service-auth-0.0.1
          ports:
            - containerPort: 8031
