deploy-common/deploy-service-facebook-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-facebook-auth
  annotations:
    konghq.com/plugins: plugin-custom-auth
spec:
  ports:
    - port: 8032
      targetPort: 8032
      name: http
      protocol: TCP
  selector:
    app: service-facebook-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-facebook-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-facebook-auth
  template:
    metadata:
      labels:
        app: service-facebook-auth
    spec:
      containers:
        - name: c-service-auth
          image: trongnv138/k8s_facebook:service-facebook-auth-0.0.2
          ports:
            - containerPort: 8032
