deploy-common/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-db
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: database
---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: db-mongo
#   labels:
#     name: database
# spec:
#   volumes:
#     - name: task-pv-storage
#       persistentVolumeClaim:
#         claimName: task-pv-claim
#   containers:
#     - name: c-db-mongo
#       image: mongo:latest
#       resources:
#         limits:
#           memory: "2Gi"
#           cpu: "4Gi"
#       ports:
#         - containerPort: 27017
#       volumeMounts:
#         - mountPath: /data/db
#           name: task-pv-storage


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  selector:
    matchLabels:
      name: database
  template:
    metadata:
      labels:
        name: database
    spec:
      containers:
      - name: c-db-mongo
        image: mongo:latest
        ports:
          - containerPort: 27017
        volumeMounts:
          - mountPath: /data/db
            name: task-pv-storage
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
