deploy-common/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: server1
      http:
        paths:
          - path: "/api/v1/auth"
            pathType: Prefix
            backend:
              service: 
                name: service-auth
                port: 
                  number: 8031
          - path: "/api/v1/facebook"
            pathType: Prefix
            backend:
              service: 
                name: service-facebook-auth
                port: 
                  number: 8032
